--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
         <link rel="stylesheet" href="style.css">
   	</head>
   	<body>
-
+  		<div class="container">
+  			<div class="row">
+  				<div class="col-12">
+		  			<h1>Stepy Akermańskie</h1>
+		  			<h2>Adam Mickiewicz</h2>
+		  			<p>Wpłynąłem na suchego przestwór oceanu,<br>
+					Wóz nurza się w zieloność i jak łódka brodzi,<br>
+					Śród fali łąk szumiących, śród kwiatów powodzi,<br>
+					Omijam kolorowe ostrowy burzanu.</p>
+					<p>Już mrok zapada, nigdzie drogi ni kurchanu;<br>
+					Patrzę w niebo, gwiazd szukam, przewodniczek łodzi;<br>
+					Tam z dala błyszczy obłok – tam jutrzenka wschodzi;<br>
+					To błyszczy Dniestr, to weszła lampa Akermanu.</p>
+					<p>Stójmy! – jak cicho! – słyszę ciągnące żurawie,<br>
+					Których by nie dościgły źrenice sokoła;<br>
+					Słyszę, kędy się motyl kołysa na trawie,</p>
+					<p>Kędy wąż śliską piersią dotyka się zioła.<br>
+					W takiej ciszy – tak ucho natężam ciekawie,<br>
+					Że słyszałbym głos z Litwy. – Jedźmy, nikt nie woła.</p>
+				</div>
+				<div class="col-6">
+					<p>Latem 1825 r. Adam Mickiewicz skorzystał z niezwykłego zaproszenia. Karolina Sobańska (jedna z najbardziej znanych dam epoki!) z polecenia generała Witta zaproponowała poecie wyprawę na Krym, w której miało uczestniczyć jeszcze kilka osób, m.in. Henryk Rzewuski, późniejszy autor Pamiątek Soplicy. Tego zaproszenia nie można było odrzucić – romantycy uwielbiali przecież podróże. Dla wygnańca i pielgrzyma było to także niezwykłe przeżycie duchowe oraz możliwość zetknięcia się z kulturą Orientu i egzotycznymi krajobrazami.
+					Podróż wzbogaciła poetę intelektualnie i duchowo, poszerzyła jego krąg doświadczeń, wywołała emocje i wspomnienia.</p>
+		  		</div>
+  			</div>
+  		</div>
   	</body>
  </html>
