--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   	<body>
   			<div class="content">
 		  		<h1>Stepy Akermańskie</h1>
-		  		<h2>Adam Mickiewicz</h2>
+		  		<h2>Adam Mickiewicz z Wilna</h2>
 		  		<p>
 						Wpłynąłem na suchego przestwór oceanu,<br>
 						Wóz nurza się w zieloność i jak łódka brodzi,<br>
