--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						Już mrok zapada, nigdzie drogi ni kurchanu;<br>
 						Patrzę w niebo, gwiazd szukam, przewodniczek łodzi;<br>
 						Tam z dala błyszczy obłok – tam jutrzenka wschodzi;<br>
-						To błyszczy Dniestr, to weszła lampa Akermanu.
+						To błyszczy DNIESTR, to weszła lampa AKERMANU.
 					</p>
 					<p>
 						Stójmy! – jak cicho! – słyszę ciągnące żurawie,<br>
@@ -32,7 +32,7 @@
 					<p>
 						Kędy wąż śliską piersią dotyka się zioła.<br>
 						W takiej ciszy – tak ucho natężam ciekawie,<br>
-						Że słyszałbym głos z Litwy. – Jedźmy, nikt nie woła.
+						Że słyszałbym głos z LITWY. – Jedźmy, nikt nie woła.
 					</p>
 				</div>
   	</body>
