--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	</head>
   	<body>
   			<div class="content">
-		  		<h1>Stepy Akermańskie</h1>
+		  		<h1 class="main">Stepy Akermańskie</h1>
 		  		<h2>Adamus Mickiewicius</h2>
 		  		<p>
 						Wpłynąłem na suchego przestwór oceanu,<br>
