--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
   	</head>
-  	<body>
+  	<body class="italic">
   			<div class="content">
 		  		<h1 class="main">Stepy Akermańskie</h1>
 		  		<h2>Adamus Mickiewicius</h2>
