--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Sonet_krymski</title>
+        <title>Sonet_krymski - master</title>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -34,6 +34,7 @@
 						W takiej ciszy – tak ucho natężam ciekawie,<br>
 						Że słyszałbym głos z LITWY. – Jedźmy, nikt nie woła.
 					</p>
+					<p>master</p>
 				</div>
   	</body>
  </html>
